Maybe fix double-scrollbars on ios II

--- a/app/posts/[slug]/code-dark.scss
+++ b/app/posts/[slug]/code-dark.scss
@@ -22,7 +22,6 @@
   pre,
   code {
     background-color: var(--pre-color);
-    overflow: visible;
   }
 
   :not(pre) > code[class*='language-'] {
