--- a/app/posts/[slug]/page.module.css
+++ b/app/posts/[slug]/page.module.css
@@ -100,6 +100,7 @@
 
   & pre,
   & code[class*='language-'] {
+    overflow: visible;
     direction: ltr;
     text-align: left;
     white-space: pre;
